Fix text overlap in small devices & change skillset display

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,5 +1,5 @@
 /* Extra small devices (phones, less than 768px) */
-@media (max-width: 767px) {
+@media (max-width: 939px) {
 
     body{
         padding: 0;
@@ -30,24 +30,13 @@
         margin-bottom: 0;
     }
 
-
-}
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-
-
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
+    // initially used in Medium devices (desktops, 992px and up), changed to all devices
     .skillset .level-title {
         display: inline-block;
         float: left;
         width: 30%;
         margin-bottom: 0;
     }
-
     .skillset .level-bar {
         display: inline-block;
         width: 70%;
@@ -56,6 +45,31 @@
         top: 1px;
     }
 
+}
+// initial value was 768px, causing text overlap, so changed to 940px
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 940px) {
+
+
+    // initially used in Medium devices (desktops, 992px and up), changed to all devices
+    .skillset .level-title {
+        display: inline-block;
+        float: left;
+        width: 30%;
+        margin-bottom: 0;
+    }
+    .skillset .level-bar {
+        display: inline-block;
+        width: 70%;
+        float: left;
+        position: relative;
+        top: 1px;
+    }
+
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
 
 }
 
